src/hand_range/snapshots/espada__hand_range__hand_range_token__tests__into_iter__it_iterates_bottom_closed_ofsuit_pair_range.snap
---
source: src/hand_range/hand_range_token.rs
expression: tokens
---
[
    (
        CardPair(AsKh),
        0.5,
    ),
    (
        CardPair(AsKd),
        0.5,
    ),
    (
        CardPair(AsKc),
        0.5,
    ),
    (
        CardPair(AhKs),
        0.5,
    ),
    (
        CardPair(AhKd),
        0.5,
    ),
    (
        CardPair(AhKc),
        0.5,
    ),
    (
        CardPair(AdKs),
        0.5,
    ),
    (
        CardPair(AdKh),
        0.5,
    ),
    (
        CardPair(AdKc),
        0.5,
    ),
    (
        CardPair(AcKs),
        0.5,
    ),
    (
        CardPair(AcKh),
        0.5,
    ),
    (
        CardPair(AcKd),
        0.5,
    ),
    (
        CardPair(AsQh),
        0.5,
    ),
    (
        CardPair(AsQd),
        0.5,
    ),
    (
        CardPair(AsQc),
        0.5,
    ),
    (
        CardPair(AhQs),
        0.5,
    ),
    (
        CardPair(AhQd),
        0.5,
    ),
    (
        CardPair(AhQc),
        0.5,
    ),
    (
        CardPair(AdQs),
        0.5,
    ),
    (
        CardPair(AdQh),
        0.5,
    ),
    (
        CardPair(AdQc),
        0.5,
    ),
    (
        CardPair(AcQs),
        0.5,
    ),
    (
        CardPair(AcQh),
        0.5,
    ),
    (
        CardPair(AcQd),
        0.5,
    ),
    (
        CardPair(AsJh),
        0.5,
    ),
    (
        CardPair(AsJd),
        0.5,
    ),
    (
        CardPair(AsJc),
        0.5,
    ),
    (
        CardPair(AhJs),
        0.5,
    ),
    (
        CardPair(AhJd),
        0.5,
    ),
    (
        CardPair(AhJc),
        0.5,
    ),
    (
        CardPair(AdJs),
        0.5,
    ),
    (
        CardPair(AdJh),
        0.5,
    ),
    (
        CardPair(AdJc),
        0.5,
    ),
    (
        CardPair(AcJs),
        0.5,
    ),
    (
        CardPair(AcJh),
        0.5,
    ),
    (
        CardPair(AcJd),
        0.5,
    ),
    (
        CardPair(AsTh),
        0.5,
    ),
    (
        CardPair(AsTd),
        0.5,
    ),
    (
        CardPair(AsTc),
        0.5,
    ),
    (
        CardPair(AhTs),
        0.5,
    ),
    (
        CardPair(AhTd),
        0.5,
    ),
    (
        CardPair(AhTc),
        0.5,
    ),
    (
        CardPair(AdTs),
        0.5,
    ),
    (
        CardPair(AdTh),
        0.5,
    ),
    (
        CardPair(AdTc),
        0.5,
    ),
    (
        CardPair(AcTs),
        0.5,
    ),
    (
        CardPair(AcTh),
        0.5,
    ),
    (
        CardPair(AcTd),
        0.5,
    ),
]
