src/hand_range/snapshots/espada__hand_range__hand_range_token__tests__into_iter__it_iterates_bottom_closed_pocket_pair_range.snap
---
source: src/hand_range/hand_range_token.rs
expression: tokens
---
[
    (
        CardPair(AsAh),
        0.9,
    ),
    (
        CardPair(AsAd),
        0.9,
    ),
    (
        CardPair(AsAc),
        0.9,
    ),
    (
        CardPair(AhAd),
        0.9,
    ),
    (
        CardPair(AhAc),
        0.9,
    ),
    (
        CardPair(AdAc),
        0.9,
    ),
    (
        CardPair(KsKh),
        0.9,
    ),
    (
        CardPair(KsKd),
        0.9,
    ),
    (
        CardPair(KsKc),
        0.9,
    ),
    (
        CardPair(KhKd),
        0.9,
    ),
    (
        CardPair(KhKc),
        0.9,
    ),
    (
        CardPair(KdKc),
        0.9,
    ),
    (
        CardPair(QsQh),
        0.9,
    ),
    (
        CardPair(QsQd),
        0.9,
    ),
    (
        CardPair(QsQc),
        0.9,
    ),
    (
        CardPair(QhQd),
        0.9,
    ),
    (
        CardPair(QhQc),
        0.9,
    ),
    (
        CardPair(QdQc),
        0.9,
    ),
]
