src/hand_range/snapshots/espada__hand_range__hand_range_token__tests__into_iter__it_iterates_double_closed_ofsuit_pair_range.snap
---
source: src/hand_range/hand_range_token.rs
expression: tokens
---
[
    (
        CardPair(Ks9h),
        0.6,
    ),
    (
        CardPair(Ks9d),
        0.6,
    ),
    (
        CardPair(Ks9c),
        0.6,
    ),
    (
        CardPair(Kh9s),
        0.6,
    ),
    (
        CardPair(Kh9d),
        0.6,
    ),
    (
        CardPair(Kh9c),
        0.6,
    ),
    (
        CardPair(Kd9s),
        0.6,
    ),
    (
        CardPair(Kd9h),
        0.6,
    ),
    (
        CardPair(Kd9c),
        0.6,
    ),
    (
        CardPair(Kc9s),
        0.6,
    ),
    (
        CardPair(Kc9h),
        0.6,
    ),
    (
        CardPair(Kc9d),
        0.6,
    ),
    (
        CardPair(Ks8h),
        0.6,
    ),
    (
        CardPair(Ks8d),
        0.6,
    ),
    (
        CardPair(Ks8c),
        0.6,
    ),
    (
        CardPair(Kh8s),
        0.6,
    ),
    (
        CardPair(Kh8d),
        0.6,
    ),
    (
        CardPair(Kh8c),
        0.6,
    ),
    (
        CardPair(Kd8s),
        0.6,
    ),
    (
        CardPair(Kd8h),
        0.6,
    ),
    (
        CardPair(Kd8c),
        0.6,
    ),
    (
        CardPair(Kc8s),
        0.6,
    ),
    (
        CardPair(Kc8h),
        0.6,
    ),
    (
        CardPair(Kc8d),
        0.6,
    ),
    (
        CardPair(Ks7h),
        0.6,
    ),
    (
        CardPair(Ks7d),
        0.6,
    ),
    (
        CardPair(Ks7c),
        0.6,
    ),
    (
        CardPair(Kh7s),
        0.6,
    ),
    (
        CardPair(Kh7d),
        0.6,
    ),
    (
        CardPair(Kh7c),
        0.6,
    ),
    (
        CardPair(Kd7s),
        0.6,
    ),
    (
        CardPair(Kd7h),
        0.6,
    ),
    (
        CardPair(Kd7c),
        0.6,
    ),
    (
        CardPair(Kc7s),
        0.6,
    ),
    (
        CardPair(Kc7h),
        0.6,
    ),
    (
        CardPair(Kc7d),
        0.6,
    ),
]
