src/hand_range/snapshots/espada__hand_range__hand_range_token__tests__into_iter__it_iterates_double_closed_pocket_pair_range.snap
---
source: src/hand_range/hand_range_token.rs
expression: tokens
---
[
    (
        CardPair(QsQh),
        0.8,
    ),
    (
        CardPair(QsQd),
        0.8,
    ),
    (
        CardPair(QsQc),
        0.8,
    ),
    (
        CardPair(QhQd),
        0.8,
    ),
    (
        CardPair(QhQc),
        0.8,
    ),
    (
        CardPair(QdQc),
        0.8,
    ),
    (
        CardPair(JsJh),
        0.8,
    ),
    (
        CardPair(JsJd),
        0.8,
    ),
    (
        CardPair(JsJc),
        0.8,
    ),
    (
        CardPair(JhJd),
        0.8,
    ),
    (
        CardPair(JhJc),
        0.8,
    ),
    (
        CardPair(JdJc),
        0.8,
    ),
    (
        CardPair(TsTh),
        0.8,
    ),
    (
        CardPair(TsTd),
        0.8,
    ),
    (
        CardPair(TsTc),
        0.8,
    ),
    (
        CardPair(ThTd),
        0.8,
    ),
    (
        CardPair(ThTc),
        0.8,
    ),
    (
        CardPair(TdTc),
        0.8,
    ),
    (
        CardPair(9s9h),
        0.8,
    ),
    (
        CardPair(9s9d),
        0.8,
    ),
    (
        CardPair(9s9c),
        0.8,
    ),
    (
        CardPair(9h9d),
        0.8,
    ),
    (
        CardPair(9h9c),
        0.8,
    ),
    (
        CardPair(9d9c),
        0.8,
    ),
]
