src/hand_range/snapshots/espada__hand_range__hand_range_token__tests__into_iter__it_iterates_double_closed_suited_pair_range.snap
---
source: src/hand_range/hand_range_token.rs
expression: tokens
---
[
    (
        CardPair(Js9s),
        0.6,
    ),
    (
        CardPair(Jh9h),
        0.6,
    ),
    (
        CardPair(Jd9d),
        0.6,
    ),
    (
        CardPair(Jc9c),
        0.6,
    ),
    (
        CardPair(Js8s),
        0.6,
    ),
    (
        CardPair(Jh8h),
        0.6,
    ),
    (
        CardPair(Jd8d),
        0.6,
    ),
    (
        CardPair(Jc8c),
        0.6,
    ),
    (
        CardPair(Js7s),
        0.6,
    ),
    (
        CardPair(Jh7h),
        0.6,
    ),
    (
        CardPair(Jd7d),
        0.6,
    ),
    (
        CardPair(Jc7c),
        0.6,
    ),
    (
        CardPair(Js6s),
        0.6,
    ),
    (
        CardPair(Jh6h),
        0.6,
    ),
    (
        CardPair(Jd6d),
        0.6,
    ),
    (
        CardPair(Jc6c),
        0.6,
    ),
]
