src/hand_range/snapshots/espada__hand_range__hand_range_token__tests__into_iter__it_iterates_single_card_pair_range.snap
---
source: src/hand_range/hand_range_token.rs
expression: tokens
---
[
    (
        CardPair(5c2d),
        0.2,
    ),
]
