src/hand_range/snapshots/espada__hand_range__hand_range_token__tests__into_iter__it_iterates_single_pocket_pair_range.snap
---
source: src/hand_range/hand_range_token.rs
expression: tokens
---
[
    (
        CardPair(2s2h),
        0.3,
    ),
    (
        CardPair(2s2d),
        0.3,
    ),
    (
        CardPair(2s2c),
        0.3,
    ),
    (
        CardPair(2h2d),
        0.3,
    ),
    (
        CardPair(2h2c),
        0.3,
    ),
    (
        CardPair(2d2c),
        0.3,
    ),
]
