src/hand_range/snapshots/espada__hand_range__hand_range_token__tests__into_iter__it_iterates_single_suited_pair_range.snap
---
source: src/hand_range/hand_range_token.rs
expression: tokens
---
[
    (
        CardPair(Ks6s),
        0.1,
    ),
    (
        CardPair(Kh6h),
        0.1,
    ),
    (
        CardPair(Kd6d),
        0.1,
    ),
    (
        CardPair(Kc6c),
        0.1,
    ),
]
